--- a/SecureStore.xcodeproj/xcshareddata/xcschemes/TestHost.xcscheme
+++ b/SecureStore.xcodeproj/xcshareddata/xcschemes/TestHost.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1020"
+   LastUpgradeVersion = "1010"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "E0F8D166225434A90090A010"
-               BuildableName = "TokenStore.app"
-               BlueprintName = "TokenStore"
-               ReferencedContainer = "container:TokenStore.xcodeproj">
+               BlueprintIdentifier = "1E105520218DFE050032C4CA"
+               BuildableName = "TestHost.app"
+               BlueprintName = "TestHost"
+               ReferencedContainer = "container:SecureStore.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,20 +32,20 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "E0F8D17E225434AB0090A010"
-               BuildableName = "TokenStoreTests.xctest"
-               BlueprintName = "TokenStoreTests"
-               ReferencedContainer = "container:TokenStore.xcodeproj">
+               BlueprintIdentifier = "1E10550B218DFDB80032C4CA"
+               BuildableName = "SecureStoreTests.xctest"
+               BlueprintName = "SecureStoreTests"
+               ReferencedContainer = "container:SecureStore.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "E0F8D166225434A90090A010"
-            BuildableName = "TokenStore.app"
-            BlueprintName = "TokenStore"
-            ReferencedContainer = "container:TokenStore.xcodeproj">
+            BlueprintIdentifier = "1E105520218DFE050032C4CA"
+            BuildableName = "TestHost.app"
+            BlueprintName = "TestHost"
+            ReferencedContainer = "container:SecureStore.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -61,15 +61,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "E0F8D166225434A90090A010"
-            BuildableName = "TokenStore.app"
-            BlueprintName = "TokenStore"
-            ReferencedContainer = "container:TokenStore.xcodeproj">
+            BlueprintIdentifier = "1E105520218DFE050032C4CA"
+            BuildableName = "TestHost.app"
+            BlueprintName = "TestHost"
+            ReferencedContainer = "container:SecureStore.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -79,15 +80,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "E0F8D166225434A90090A010"
-            BuildableName = "TokenStore.app"
-            BlueprintName = "TokenStore"
-            ReferencedContainer = "container:TokenStore.xcodeproj">
+            BlueprintIdentifier = "1E105520218DFE050032C4CA"
+            BuildableName = "TestHost.app"
+            BlueprintName = "TestHost"
+            ReferencedContainer = "container:SecureStore.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
